force-app/main/default/objects/op_Call_Analysis__c/op_Call_Analysis__c.object-meta.xml
<CustomObject>
    <label>Call Analysis</label>
    <pluralLabel>Call Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Call Analysis Number</label>
        <type>AutoNumber</type>
        <displayFormat>CA-{000000}</displayFormat>
    </nameField>
</CustomObject>