force-app/main/default/objects/op_Call_Analysis__c/fields/op_appointment__c.field-meta.xml
<CustomField>
    <fullName>op_appointment__c</fullName>
    <label>Appointment</label>
    <type>Text</type>
    <length>255</length>
</CustomField>