force-app/main/default/objects/op_Call_Analysis__c/fields/op_evaluation_url__c.field-meta.xml
<CustomField>
    <fullName>op_evaluation_url__c</fullName>
    <label>Evaluation URL</label>
    <type>Url</type>
</CustomField>