force-app/main/default/objects/op_Call_Analysis__c/fields/op_external_call_id__c.field-meta.xml
<CustomField>
    <fullName>op_external_call_id__c</fullName>
    <description>Objection Proof platform call ID. Unique, so a retried call-activity request can't record the same call twice.</description>
    <externalId>true</externalId>
    <label>External Call ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>