force-app/main/default/objects/op_Call_Analysis__c/fields/op_full_evaluation__c.field-meta.xml
<CustomField>
    <fullName>op_full_evaluation__c</fullName>
    <label>Full Evaluation</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>