force-app/main/default/objects/op_Call_Analysis__c/fields/op_outcome__c.field-meta.xml
<CustomField>
    <fullName>op_outcome__c</fullName>
    <label>Outcome</label>
    <type>Text</type>
    <length>255</length>
</CustomField>