force-app/main/default/objects/op_Call_Analysis__c/fields/op_prospect_name__c.field-meta.xml
<CustomField>
    <fullName>op_prospect_name__c</fullName>
    <label>Prospect Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>