force-app/main/default/objects/op_Call_Analysis__c/fields/op_prospect_phone__c.field-meta.xml
<CustomField>
    <fullName>op_prospect_phone__c</fullName>
    <label>Prospect Phone</label>
    <type>Phone</type>
</CustomField>