force-app/main/default/objects/op_Call_Analysis__c/fields/op_salescall_id__c.field-meta.xml
<CustomField>
    <fullName>op_salescall_id__c</fullName>
    <label>Sales Call ID</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>