force-app/main/default/objects/op_Call_Analysis__c/fields/op_summary__c.field-meta.xml
<CustomField>
    <fullName>op_summary__c</fullName>
    <label>Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>