force-app/main/default/objects/op_Call_Analysis__c/fields/op_Task__c.field-meta.xml
<CustomField>
    <fullName>op_Task__c</fullName>
    <label>Task</label>
    <type>Lookup</type>
    <referenceTo>Task</referenceTo>
    <relationshipLabel>Call Analyses</relationshipLabel>
    <relationshipName>Call_Analyses</relationshipName>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>